SCC-72 - Fixed colours and also collapse of filter

--- a/src/app/shop/shop-filter/shop-filter.component.scss
+++ b/src/app/shop/shop-filter/shop-filter.component.scss
@@ -4,7 +4,7 @@
 }
 
 .dropdown-menu-color {
-  max-height: 300px;
+  max-height: 375px;
   overflow-y: scroll;
 }
 .grid-pearl {
@@ -60,15 +60,6 @@
 .grid-pink {
   color: pink;
 }
-
-.grid-gold {
-  color: gold;
-}
-
-.grid-silver {
-  color: silver;
-}
-
 .grid-print {
   background: url(../../../assets/img/patterns/pattern-1.svg) !important;
 }
